# gb_emu

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PORTING_STATUS.md
.claude/skills/code-philosophy/: SKILLS.md
.claude/skills/commit-philosophy/: SKILL.md
.claude/skills/teensy-serial-log/: SKILLS.md
core/: Cargo.toml
core/src/: apu.rs  bootrom.rs  cpu.rs  gameboy.rs  input.rs  lib.rs  mmu.rs  platform.rs  ppu.rs  wram.rs
core/src/cpu/: exec.rs  instr.rs  operand.rs
docs/: PORTING_STATUS.md  cgb-support-plan.md  hardware_decisions_levelshift.md  teensy_button_wiring.md  teensy_setup_guide.md
docs/adrs/: 001-rom-bank-ram-cache.md
gba/: Cargo.toml
gba/examples/: headless.rs  trace_runaway.rs
gba/src/: bus.rs  dma.rs  gba.rs  lib.rs  ppu.rs  timer.rs
gba/src/cpu/: arm.rs  mod.rs  swi.rs  thumb.rs
gba/tests/: cpu.rs
host/: Cargo.toml
host/examples/: audio_dump.rs  speed_check.rs  trace.rs
host/src/: cartridge.rs  gba_run.rs  lcd.rs  main.rs  renderer.rs
memo/: section2.md  section3.md
src/: apu.rs  backend.rs  bootrom.rs  cartridge.rs  cpu.rs  gameboy.rs  hram.rs  joypad.rs  lcd.rs  main.rs  mmu.rs  peripherals.rs  ppu.rs  renderer.rs  timer.rs  wram.rs
src/cpu/: decode.rs  exec.rs  instr.rs  instructions.rs  operand.rs  peripherals.rs  registers.rs
teensy/: Cargo.toml  Makefile  build.rs  memory.x
teensy/.cargo/: config.toml
teensy/src/: audio.rs  cartridge.rs  display.rs  input.rs  main.rs  sdcard.rs
teensy/src/display/: font.rs  mod.rs  panel.rs
