[package]
name = "gb-teensy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gb-teensy"
test = false
bench = false

[dependencies]
gb-core         = { path = "../core" }
cortex-m        = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt     = "0.7"
teensy4-bsp     = "0.4"
teensy4-panic   = "0.2"
embedded-hal    = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
